# korlap

./: .gitignore  CLAUDE.md  README.md  design.md  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
src/: app.css  app.html
src-mcp/: server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  mcp_api.rs  state.rs  traffic.rs
src-tauri/src/commands/: agent.rs  agent_backend.rs  context.rs  files.rs  git.rs  github.rs  helpers.rs  jira.rs  lsp.rs  mod.rs  oauth.rs  persistence.rs  repo.rs  scripts.rs  staging.rs  system.rs  terminal.rs  workspace.rs
src-tauri/src/git_provider/: github.rs  mod.rs
src-tauri/src/lsp/: detect.rs  mod.rs  server.rs  types.rs
src/lib/: actions.ts  chat-utils.ts  hljs-korlap.css  ipc.ts  markdown.ts  pr-status.ts  review-prompt.ts  themes.ts
src/lib/components/: AgentActivityBar.svelte  AutopilotPill.svelte  CardDetailOverlay.svelte  ChatPanel.svelte  CodeEditor.svelte  DependencyGraph.svelte  DiffViewer.svelte  Dropdown.svelte  FileBrowser.svelte  JiraImportPopover.svelte  KanbanBoard.svelte  KanbanCard.svelte  KanbanColumn.svelte  MentionInput.svelte  RepoSettings.svelte  ResizeHandle.svelte  ReviewAlertBar.svelte  ReviewPill.svelte  ScriptRunner.svelte  SearchModal.svelte  Sidebar.svelte  TaskPopover.svelte  Terminal.svelte  TitleBar.svelte  Toasts.svelte  VirtualList.svelte  WorkspacePanel.svelte
src/lib/stores/: messages.svelte.ts  (+2 more)
src/routes/: +layout.svelte  +page.svelte
tests/: app.spec.ts  helpers.ts
(+19 files in other folders)
