[package]
name = "korlap"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "korlap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
portable-pty = "0.8"
base64 = "0.22"
ignore = "0.4"
fuzzy-matcher = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
regex = "1"
sysinfo = "0.33"

[lints.rust]
# The `objc` 0.2 crate's sel_impl! macro uses cfg(feature = "cargo-clippy"),
# which triggers check-cfg warnings. Declare it as expected.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
rand = "0.8"

